...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.MainActivity">

    <Button
        android:id="@+id/MainActivityDropdownButton"
        android:layout_width="79dp"
        android:layout_height="36dp"
        android:layout_marginTop="15dp"
        android:onClick="showPopup"
        android:text="Menu"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
...
